style.css
html,
body {
    margin: 0;
    padding: 0;
    background-color: rgb(7, 7, 48);
}

.main-header {
    background-image: url('https://th.bing.com/th/id/R.5a142e20099ffa294e8a97f845363d4f?rik=JINNuszhRNizfQ&riu=http%3a%2f%2fwallpaperstrend.com%2fwp-content%2fuploads%2fPhotography%2fPhotography02%2fThe-city-lights-in-the-dark-night-3840x2160.jpg&ehk=FvxMQTLPpZqu9l1sXuENQb6mcoUU2zw%2fgp1dmiaZ3mc%3d&risl=&pid=ImgRaw&r=0');
    background-size: cover; 
    padding-top: 15px;
    padding-bottom: 15px;
    background-position: 50% 65%;
}

.about-site {
    font-size: 15px;
    font-family: "Georgia";
}

select {
    background-color: #070730;
    color: white;
    position: absolute;
    right: 20px;
    top: 10px;
}

.description {
    text-align: center;
    color: white;
    font-size: medium;
}

.title {
    text-align: center;
    margin: 0;
    font-size: 7em;
    font-family: "Brush Script MT";
    font-weight: normal;
    color: rgb(255, 204, 0);
}

#card-container {
    display: block;
    justify-content: center;
    margin: 20px;
}

.card {
    width: auto;
    height: auto;
    border: 1px solid rgb(255, 204, 0);
    border-radius: 10px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    margin: 5px;
    overflow: hidden;
}

.card-content {
    padding: 20px;
    text-align: center;
    font-family: "Georgia";
    color: white;
}

.card-content h2 {
    margin-top: 0;
    font-size: 20px;
}

.card-content pre {
    font-size: 17px;
    font-family: "Georgia";
}

.card img {
    width: 50%;
    height: auto;
}

a {
    color: white;
}


button {
    text-align: center;
    background-color: rgb(13, 13, 98);
    border: none;
    padding-left: 10px;
    padding-right: 10px;
    height: 40px;
    border-radius: 10px;
    color: white;
    font-size: 22px;
    cursor: pointer;
    margin: 5px;
}

